--- a/client/templates/base.html
+++ b/client/templates/base.html
@@ -30,7 +30,10 @@
                 <a href="{% url 'vehicle' %}" class="{% if request.path == '/client/vehicle/' %}active{% endif %} px-6 py-3 bg-slate-800 hover:bg-slate-700 text-white rounded-2xl text-xl transition-colors ">My Vehicles</a>
             </div>
             <!-- login button -->
-            <div>
+            <div class="flex items-center gap-4">
+                {% if user.is_staff %}
+                    <a href="{% url 'dashboard' %}" class="px-6 py-3 bg-slate-800 hover:bg-slate-700 text-white rounded-2xl text-xl transition-colors ">Back Office</a>
+                {% endif %}
                 {% if request.user.is_authenticated %}
                     <a href="{% url 'profile' %}"
                         class="{% if request.path == '/client/profile/' %}active{% endif %} pl-6 pr-8 py-3 bg-slate-800 hover:bg-slate-700/70 text-white rounded-3xl text-xl transition-colors flex items-center gap-3">
